# tracer-client

./: .cfignore  .claudeignore  .gitignore  .gitmodules  Cargo.toml  DATABASE_MIGRATIONS.md  DOCUMENTATION.md  Dockerfile  INFRASTRUCTURE_SETUP.md  Makefile  README.md  SECURITY.md  binary-installer-common.sh  binary-installer-dev.sh  binary-installer-prod.sh  binary-installer.sh  dev-binary-installer.sh  development.md  diff-process-watcher.txt  docker-compose.yml  install-tracer.sh  installation-script-development.sh  installation-script.sh  installation.sh  pre-commit.sh  rust-toolchain.toml  rustfmt.toml  tracer.dev.toml  tracer.toml
.github/: dependabot.yml  (+1 more)
integration_tests/: Cargo.toml
integration_tests/tests/: parallel.rs  simple_queries.rs
integration_tests/tests/common/: mod.rs
src/cli/: Cargo.toml  mod.rs  nondaemon_commands.rs
src/cli/src/: commands.rs  lib.rs  logging.rs  main.rs  nondaemon_commands.rs  process_command.rs  utils.rs
src/cli/tests/: cli.rs
src/cli/tests/common/: mod.rs  test_server.rs
src/client/: Cargo.toml
src/client/src/: lib.rs  params.rs  tracer_client.rs
src/client/src/config_manager/: bashrc_intercept.rs  config.rs  mod.rs
src/client/src/events/: mod.rs
src/client/src/exporters/: db.rs  log_forward.rs  log_writer.rs  manager.rs  mod.rs
src/cloud_providers/aws/: Cargo.toml  mod.rs  pricing.rs  s3.rs  secrets.rs
src/cloud_providers/aws/src/: aws_metadata.rs  config.rs  lib.rs  pricing.rs  s3.rs  secrets.rs
src/common/: Cargo.toml
src/common/src/: constants.rs  current_run.rs  lib.rs  pipeline_tags.rs  recorder.rs  trigger.rs  types.rs  utils.rs
src/common/src/debug_log/: mod.rs
src/common/src/event/: event.rs  mod.rs  otel.rs  utils.rs
src/common/src/http_client/: mod.rs
src/common/src/target_process/: manager.rs  mod.rs  nf_process_list.json  nf_process_match.rs  pattern_match.rs  target_matching.rs  targets_list.rs
src/common/src/types/: current_run.rs  ebpf_trigger.rs  mod.rs  pipeline_tags.rs  trigger.rs
src/daemon/: Cargo.toml
src/daemon/src/: app.rs  client.rs  daemon.rs  lib.rs  server.rs  structs.rs
src/ebpf/: .gitignore  Cargo.toml  README.md  build.rs
src/ebpf-libbpf/: .gitignore  Cargo.toml  README.md  binding.rs  build.rs
src/ebpf-libbpf/c/: Makefile  bootstrap  bootstrap.bpf.c  bootstrap.c  bootstrap.h  bootstrap_api.h
src/ebpf-libbpf/c/.output/: bootstrap.skel.h
src/ebpf/c/: Makefile  bootstrap-api.h  bootstrap-filter.h  bootstrap-filter.hpp  bootstrap.bpf.c  bootstrap.c  bootstrap.cpp  bootstrap.gen.h  bootstrap.h  bootstrap.templ.h  example.c  example.cpp
src/ebpf/common/: Cargo.toml
src/ebpf/common/src/: lib.rs  process_enter.rs
src/ebpf/kernel/: Cargo.toml
src/ebpf/kernel/src/: gen.rs  lib.rs  main.rs
src/ebpf/rs/: binding.rs  ebpf_trigger.rs  example.rs  lib.rs  types.gen.rs  types.rs  types.templ.rs  utils.rs
src/ebpf/rs/types/: mod.rs  types.rs
src/ebpf/typegen/: Cargo.toml  events.toml  typegen.rs
src/ebpf/user/: Cargo.toml  build.rs
src/ebpf/user/src/: lib.rs
src/extracts/: Cargo.toml  file_watcher.rs  mod.rs  process_watcher.rs
src/extracts/fs/: utils.rs
src/extracts/metrics/: mod.rs
src/extracts/src/: data_samples.rs  file_watcher.rs  lib.rs  nextflow_log_watcher.rs  process_watcher.rs
src/extracts/src/ebpf_watcher/: mod.rs  watcher.rs
src/extracts/src/handlers/: ebpf_manager.rs  file_manager.rs  mod.rs  process_manager.rs
src/extracts/src/metrics/: extract_variables.rs  mod.rs  system_metrics.rs
src/extracts/src/process_watcher/: ebpf_watcher.rs  extract_process_data.rs  mod.rs  process_manager.rs  process_utils.rs  utils.rs  watcher.rs
src/extracts/src/stdout/: mod.rs
src/extracts/src/syslog/: mod.rs
src/extracts/src/system_metrics/: mod.rs
src/extracts/stdout/: mod.rs
src/extracts/syslog/: mod.rs
src/extracts/tests/: process_pipeline.rs
src/tracer/: Cargo.toml  build.rs
src/tracer-common/: Cargo.toml
src/tracer-common/src/: lib.rs  main.rs  message.rs  sentry.rs  system.rs  types.rs  workdir.rs
src/tracer-common/src/secure/: fs.rs  mod.rs  spawn.rs  url.rs
src/tracer-common/tests/: spawn-test.rs
src/tracer-installer/: Cargo.toml
src/tracer-installer/src/: constants.rs  fs.rs  installer.rs  main.rs  message.rs  platform.rs  secure.rs  sentry.rs  types.rs  utils.rs
src/tracer-installer/src/checks/: api.rs  dependency.rs  environment.rs  kernel.rs  mod.rs  os.rs  otel.rs  root.rs  storage.rs
src/tracer-installer/src/installer/: install.rs  mod.rs  platform.rs  url.rs  url_builder.rs
src/tracer-installer/src/secure/: fs.rs  mod.rs  url.rs
src/tracer/src/: cli_setup.rs  commands.rs  constants.rs  lib.rs  logging.rs  main.rs  nondaemon_commands.rs  process_command.rs  utils.rs
src/tracer/src/auth/: client.rs  config.rs  mod.rs
src/tracer/src/cli/: commands.rs  helper.rs  mod.rs  process_command.rs  process_daemon_command.rs
src/tracer/src/client/: mod.rs  tracer_client.rs
src/tracer/src/common/: constants.rs  mod.rs  recorder.rs  utils.rs
src/tracer/src/config/: config.rs  config_loader.rs  defaults.rs  mod.rs  tests.rs
src/tracer/src/constants/: environment.rs
src/tracer/src/daemon/: app.rs  client.rs  daemon_run.rs  handlers.rs  helper.rs  initialization.rs  mod.rs  routes.rs  server.rs  state.rs  structs.rs
src/tracer/src/extracts/: data_samples.rs  mod.rs
src/tracer/src/opentelemetry/: collector.rs  config.rs  file_watcher.rs  installation.rs  mod.rs  otel-config-template.yaml  process.rs  utils.rs
src/tracer/src/process_identification/: constants.rs  mod.rs  recorder.rs  utils.rs
src/tracer/src/utils/: analytics.rs  command.rs  env.rs  file_system.rs  files.rs  info_display.rs  info_formatter.rs  input_validation.rs  mod.rs  sentry.rs  spawn.rs  string_validation.rs  system_info.rs  telemetry.rs  version.rs  workdir.rs  yaml.rs
src/tracer/tests/: pipeline-nfcore-rnaseq.rs  pipeline-nfcore-rnaseq.test.rs  pipeline-test.rs  spawn-test.rs
src/tracer/tests/assets/: nfcore_rnaseq_process_list.json
src/tracer_lib/: Cargo.toml
src/tracer_lib/src/: lib.rs  params.rs  tracer_client.rs
(+483 files in other folders)
