[workspace]
resolver = "2"
members = ["src/tracer", "src/ebpf", "src/tracer-installer"]
default-members = ["src/tracer", "src/ebpf", "src/tracer-installer"]

[workspace.package]
version = "2025.5.15+1"
edition = "2021"
authors = ["Tracer <info@tracer.cloud>"]
homepage = "https://tracer.cloud/"
repository = "https://github.com/Tracer-Cloud/tracer-client/"

[workspace.dependencies]
tracer = { path = "src/tracer" }


anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
daemonize = "0.5.0"
log = "0.4.27"
octocrab = "0.44.1"
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
serde = { version = "1.0.219", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.141"
sysinfo = "0.36.1"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.9.2"
tracing = { version = "0.1.41" }
tracing-appender = "0.2.3"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }

ec2_instance_metadata = "0.3.0"
rand = "0.9.2"
uuid = { version = "1.17.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }


aws-config = { version = "1.8.2", features = ["behavior-version-latest"] }
aws-sdk-pricing = "1.78.0"
aws-sdk-s3 = "1.97.0"
aws-credential-types = "1.2.4"
aws-sdk-secretsmanager = "1.80.0"
aws-sdk-ec2 = "1.148.0"

tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "time",
    "local-time",
] }
dirs = "6.0.0"
serde-query = "0.2.0"
itertools = "0.14.0"
percent-encoding = "2.3.1"
colored = "3.0.0"
axum = "0.8.4"
tempfile = "3.20.0"
config = { version = "0.15.13", default-features = false, features = [
    "toml",
    "convert-case",
] }
serial_test = "3.2.0"
dotenv = "0.15.0"
sentry = { version = "0.41.0", default-features = false, features = [
    "anyhow",
    "backtrace",
    "reqwest",
    "rustls",
    "panic",
] }
rstest = "0.25.0"
typed-builder = "0.21.0"
futures-util = "0.3.31"
dialoguer = "0.11.0"
console = "0.16.0"
mockall = "0.13.1"
regex = "1.11.1"
rustls = { version = "0.23.29", features = ["ring"] }
shlex = "1.3.0"
yaml-rust2 = "0.10.3"
pretty_assertions_sorted = "1.2.3"
bollard = "0.19.1"
built = { version = "0.8.0", features = ["chrono", "git2"] }
multi_index_map = "0.15.0"
tokio-retry = "0.3.0"
serde_regex = "1.1.0"
dashmap = "6.1.0"
termion= "4.0.5"