[workspace]
resolver = "2"
members = [
    "src/tracer-common",
    "src/tracer",
    "src/ebpf",
    "src/tracer-installer",
]
default-members = [
    "src/tracer-common",
    "src/tracer",
    "src/ebpf",
    "src/tracer-installer",
]

[workspace.package]
version = "2025.5.15+1"
edition = "2021"
authors = ["Tracer <info@tracer.cloud>"]
homepage = "https://tracer.cloud/"
repository = "https://github.com/Tracer-Cloud/tracer-client/"

[workspace.dependencies]
tracer-common = { path = "src/tracer-common" }
tracer_ebpf = { path = "src/ebpf" }

anyhow = "1.0.98"
assert_cmd = "2.0.17"
async-trait = "0.1.88"
aws-config = { version = "1.8.4", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.4"
aws-sdk-ec2 = "1.156.0"
aws-sdk-pricing = "1.82.0"
aws-sdk-s3 = "1.101.0"
aws-sdk-secretsmanager = "1.83.0"
axum = "0.8.4"
bollard = "0.19.2"
built = { version = "0.8.0", features = ["chrono", "git2"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive", "env"] }
colored = "3.0.0"
config = { version = "0.15.13", default-features = false, features = [
    "toml",
    "convert-case",
] }
console = "0.16.0"
daemonize = "0.5.0"
dashmap = "6.1.0"
dialoguer = "0.11.0"
dirs-next = "2.0.0"
dotenvy = "0.15.7"
ec2_instance_metadata = { git = "https://github.com/Tracer-Cloud/ec2-instance-metadata-rs.git", branch = "master" }
enquote = "1.1.0"
flate2 = "1.1.2"
futures-util = "0.3.31"
git2 = { version = "0.20.2", features = [
    "https",
    "vendored-openssl",
], default-features = false }
indicatif = "0.18.0"
itertools = "0.14.0"
log = "0.4.27"
mockall = "0.13.1"
nix = { version = "0.30.1", features = ["user"] }
octocrab = "0.44.1"
percent-encoding = "2.3.1"
pretty_assertions_sorted = "1.2.3"
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
rstest = "0.25.0"
rustls = { version = "0.23.31", features = ["ring"] }
sentry = { version = "0.41.0", default-features = false, features = [
    "anyhow",
    "backtrace",
    "reqwest",
    "rustls",
    "panic",
] }
serde = { version = "1.0.219", features = ["std", "derive", "serde_derive"] }
serde-query = "0.2.0"
serde_json = "1.0.142"
serde_regex = "1.1.0"
serial_test = "3.2.0"
shlex = "1.3.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
sysinfo = "0.36.1"
tar = "0.4.44"
tempfile = "3.20.0"
termion = "4.0.5"
tokio = { version = "1.47.1", features = ["full"] }
tokio-retry = "0.3.0"
tokio-util = "0.7.16"
toml = "0.9.5"
tracing = { version = "0.1.41" }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "time",
    "local-time",
] }
typed-builder = "0.21.0"
uuid = { version = "1.17.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
which = "8.0.0"
yaml-rust2 = "0.10.3"

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
