[package]
name = "integration_tests"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"

[dev-dependencies]
bollard = { workspace = true }
