[package]
name = "tracer_cli"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
daemonize = { workspace = true }
octocrab = { workspace = true }
predicates = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
colored = { workspace = true }
tempfile = { workspace = true }
assert_cmd = { workspace = true }
tracer_common = { workspace = true }
tracer_extracts = { workspace = true }
tracer_lib = { workspace = true }
tracer_daemon = { workspace = true }

[dev-dependencies]
bollard = { workspace = true }
tracer_aws = { workspace = true }
sqlx = { workspace = true }

