[package]
name = "tracer_client"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
tracer_aws = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
homedir = { workspace = true }
log = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
sqlx = { workspace = true }

rand = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }



dirs = { workspace = true }
percent-encoding = { workspace = true }

tempfile = { workspace = true }
config = { workspace = true }

tracer_common = { workspace = true }
tracer_extracts = { workspace = true }
tracer_ebpf_user = { workspace = true }

reqwest = {workspace = true}