[package]
name = "tracer_daemon"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
tracer_aws = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
daemonize = { workspace = true }
homedir = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
octocrab = { workspace = true }
predicates = { workspace = true }
random-string = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
url = { workspace = true }
linemux = { workspace = true }
tokio-stream = { workspace = true }
sqlx = { workspace = true }

ec2_instance_metadata = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }

aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-pricing = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }

tracing-log = { workspace = true }
tracing-loki = { workspace = true }

tracing-subscriber = { workspace = true }
dirs = { workspace = true }
serde-query = { workspace = true }
itertools = { workspace = true }
percent-encoding = { workspace = true }
walkdir = { workspace = true }
colored = { workspace = true }
axum = { workspace = true }
tempfile = { workspace = true }
config = { workspace = true }
serial_test = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
bollard = { workspace = true }
assert_cmd = { workspace = true }
tracer_common = { workspace = true }
tracer_extracts = { workspace = true }
tracer_lib = { workspace = true }