[package]
name = "tracer_daemon"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }

reqwest = { workspace = true }
serde = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }

tracing-subscriber = { workspace = true }
itertools = { workspace = true }
axum = { workspace = true }
tracer_common = { workspace = true }
tracer_extracts = { workspace = true }
tracer_lib = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }