# Adapted from ../ebpf/user/Cargo.toml

[package]
name = "tracer_ebpf_libbpf"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
build = "build.rs"
links = "bootstrap"

[lib]
path = "binding.rs"

[dependencies]
tracer_ebpf_common = { workspace = true, features = ["user"] }

anyhow = { workspace = true, default-features = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracer_common = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
