[package]
name = "tracer_ebpf"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
build = "build.rs"
links = "bootstrap"

[lib]
path = "rs/lib.rs"

[[bin]]
name = "example"
path = "rs/example.rs"

[dependencies]
anyhow = { workspace = true, default-features = true }
log = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
ctrlc = "3.4"
tokio = { workspace = true, features = ["sync"] }
parking_lot = "0.12"

[build-dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
