[package]
name = "tracer_ebpf"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
build = "build.rs"
links = "bootstrap"

[lib]
path = "rs/lib.rs"

[dependencies]
anyhow = { workspace = true, default-features = true }
tokio = { workspace = true }
chrono.workspace = true
serde = { workspace = true }
shlex = { workspace = true }
enquote = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
