[package]
name = "tracer_ebpf"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"
links = "bootstrap"

[lib]
path = "rs/lib.rs"

[dependencies]
anyhow = { workspace = true, default-features = true }
chrono.workspace = true
enquote.workspace = true
serde.workspace = true
shlex.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
anyhow.workspace = true
