[package]
name = "tracer_extracts"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracer_ebpf = { path = "../ebpf" }
itertools = { workspace = true }

once_cell = { workspace = true }
tracer_common = { workspace = true }
rstest = {workspace = true}
mockall = {workspace = true}
