[package]
name = "tracer-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
assert_cmd.workspace = true
colored.workspace = true
nix.workspace = true
tempfile.workspace = true
which.workspace = true

[dev-dependencies]
rstest.workspace = true
