[package]
name = "tracer-installer"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
console = { workspace = true }
colored = { workspace = true }
futures-util = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
rustls = { workspace = true }
tokio-retry = { workspace = true }
sentry = { workspace = true }
sysinfo = { workspace = true }
ec2_instance_metadata = { workspace = true }

indicatif = { workspace = true }
async-trait = { workspace = true }
nix = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
