[package]
name = "tracer-installer"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tracer-common.workspace = true

anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
colored.workspace = true
console.workspace = true
dirs-next.workspace = true
ec2_instance_metadata.workspace = true
flate2.workspace = true
futures-util.workspace = true
indicatif.workspace = true
nix.workspace = true
reqwest.workspace = true
rustls.workspace = true
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-retry.workspace = true
