[package]
name = "tracer-installer"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
colored.workspace = true
ec2_instance_metadata.workspace = true
flate2.workspace = true
futures-util.workspace = true
indicatif.workspace = true
nix.workspace = true
reqwest.workspace = true
rustls.workspace = true
sentry.workspace = true
serde.workspace = true
softpath.workspace = true
sysinfo.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-retry.workspace = true
url.workspace = true
