[package]
name = "tracer"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

default-run = "tracer"

build = "build.rs"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-pricing = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
config = { workspace = true }
console = { workspace = true }
daemonize = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
ec2_instance_metadata = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
mockall = { workspace = true }
multi_index_map = { workspace = true }
octocrab = { workspace = true }
percent-encoding = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-query = { workspace = true }
shlex = { workspace = true }
sqlx = { workspace = true }
sysinfo = { workspace = true }
tracer_ebpf = { path = "../ebpf" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio-retry = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true }
yaml-rust2 = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
dotenv = { workspace = true }
serial_test = { workspace = true }
uuid = { workspace = true }
rstest = { workspace = true }
pretty_assertions_sorted = { workspace = true }

[build-dependencies]
built = { workspace = true }
