[package]
name = "tracer"

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

default-run = "tracer"

build = "build.rs"

[dependencies]
tracer-common = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
octocrab = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio-retry = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
colored = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
sentry = { workspace = true }
console = { workspace = true }
chrono = { workspace = true }
sysinfo = { workspace = true }
tracer_ebpf = { path = "../ebpf" }
itertools = { workspace = true }

mockall = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
percent-encoding = { workspace = true }
tokio-util = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-pricing = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-ec2 = { workspace = true }
serde-query = { workspace = true }
config = { workspace = true }
ec2_instance_metadata = { workspace = true }
axum = { workspace = true }
typed-builder = { workspace = true }
dialoguer = { workspace = true }
regex = { workspace = true }
rustls = { workspace = true }
yaml-rust2 = { workspace = true }
shlex = { workspace = true }
bollard = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
termion = { workspace = true }
git2 = { workspace = true }
which = { workspace = true }
nix = { workspace = true }
softpath = { workspace = true }
url = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
dotenvy = { workspace = true }
serial_test = { workspace = true }
uuid = { workspace = true }
rstest = { workspace = true }
pretty_assertions_sorted = { workspace = true }

[build-dependencies]
built = { workspace = true }
