[package]
name = "tracer"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "tracer"
build = "build.rs"

[dependencies]
tracer_ebpf.workspace = true

anyhow.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-ec2.workspace = true
aws-sdk-pricing.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-secretsmanager.workspace = true
axum.workspace = true
bollard.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
config.workspace = true
console.workspace = true
dashmap.workspace = true
dialoguer.workspace = true
dirs-next.workspace = true
flate2.workspace = true
tar.workspace = true
ec2_instance_metadata.workspace = true
futures-util.workspace = true
git2.workspace = true
itertools.workspace = true
log.workspace = true
mockall.workspace = true
nix.workspace = true
octocrab.workspace = true
percent-encoding.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
softpath.workspace = true
sqlx.workspace = true
sysinfo.workspace = true
termion.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio-retry.workspace = true
tokio-util.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
typed-builder.workspace = true
url.workspace = true
uuid.workspace = true
which.workspace = true
yaml-rust2.workspace = true

tempfile = { workspace = true, optional = true }

[dev-dependencies]
dotenvy.workspace = true
pretty_assertions_sorted.workspace = true
rstest.workspace = true
serial_test.workspace = true
sqlx.workspace = true
tempfile.workspace = true
uuid.workspace = true

[build-dependencies]
built.workspace = true

[features]
test-bins = ["dep:tempfile"]

[[bin]]
name = "tracer"
path = "src/main.rs"

[[bin]]
name = "tracer-test-spawn"
path = "tests/bin/test-spawn.rs"
required-features = ["test-bins"]
