[package]
name = "tracer_ebpf_common"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[features]
default = []
user = ["aya", "tracer_common", "anyhow"]

[dependencies]
aya = { workspace = true, optional = true }
tracer_common = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }