[package]
name = "tracer_ebpf_common"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[features]
default = []
user = ["tracer_common", "anyhow", "chrono"]

[dependencies]
tracer_common = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
